style/index.css
/* RESET STYLING */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* MY CSS */

:root {
  --blackish-color: #52575D;
  --offWhite-Color: #DDDDDD;
  --lightBlue: #104e85d5;
  --greyishColor: #44484d;
  --whiterColor: #EEEEEE;
}

/* //devonshire possible font choice */




* {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
  max-width: 100%;
  overflow-x: hidden;
}

body {
  font-family: "Maven Pro", sans-serif;
  text-decoration: none;
  background-color: var(--offWhite-Color);
  max-width: 100%;
    overflow-x: hidden;
}

header {
  width: 100%;
  height: 100px;
  background-color: var(--offWhite-Color);
  box-shadow: 0 5px 4px 0 rgba(0, 0, 0, 0.397)
}

.logoheader {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  align-content: space-around;
}

#logofire {
  margin: 0 -40px 0 15px; 
  width: 30px;
  height: 30px;

}

header div {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}


/* ///////////////sub header section//////////// */

.subHeaderSection {
  background-color: var(--lightBlue);
  padding: 90px 0px;
  width: 100%;
  /* border-bottom: 2px solid black; */
  height: auto;
  /* margin-bottom: -.5px; */
  /* clip-path: polygon(0 0,100% 0,100% calc(100% - 25px),50% 100%,0 calc(100% - 25px)); */
}


#mainPhoto {
  width: 450px;
  display: block;
  border-radius: 5%;
  margin: 0px 7%;
  transform: perspective(1000px);
  transform-style: preserve-3d;
  transition: transform 300ms cubic-bezier(0.03, 0.98, 0.52, .99);
}

#mainTitePhoto {
  width: 70%;
  margin: 0 auto;
  margin-top: 0px;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

#infoRightOfMainPhoto {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-content: center;
  text-decoration: none;
}

#mainTitePhoto button {
  width: 175px;
  height: 60px;
  border-radius: 5px;
  font-size: 1.1rem;
  background-color: var(--offWhite-Color);
  margin-top: 10px;
  color: black;
}

#mainTitePhoto button:hover {
  background-color: var(--whiterColor);
  filter: brightness(120%);
}

#mainTitePhoto div {
  margin: 0px 3% 0px 0px;
}

#mainTitePhoto div p {
  width: 100%;
  line-height: 1.4;
  margin: 3% -10px 3% 0px;
  font-size: 1rem;
  color: var(--whiterColor)
}

#mainTitePhoto h1 {
  font-size: 3rem;
  color: var(--whiterColor)
}

header h3 {
  font-size: 2rem;
  margin: 2rem 3rem;
}



/* ////////////navs///////////////// */


.navigation {
  display: flex;
  flex-flow: row nowrap;
  justify-content: flex-end;
  margin: 2rem 3rem;
}

nav {
  width: 100px;
  border: 1.7px solid black;
  margin: 0 2.5px;
  border-radius: 5px;

}

nav a {
  text-decoration: none;
  color: black;
  font-size: 1.1rem;
  text-align: center;
  width: 100%;
  display: inline-block;
  margin-top: 5px;
}

nav:hover {
  background-color: var(--whiterColor);
  filter: brightness(120%);
  transition: all 0.2s ease-in-out;
  transform: scale(1.04);
}


/* //////////////////HAMBURGER/////////////////// */

#hamburger {
  display: none;
  position: absolute;
  width: 100%;
  text-align: center;
  font-size: 40px;
  height: 310px;
  background-color: var(--offWhite-Color);
  color: var(--offWhite-Color);
  line-height: 1.7;
  border-bottom: 2px solid black;
  border-top: 2px solid black;
  z-index: 10;
}

.hr-line {
  width: 100%;
  height: 2px;
  background-color: black;
  margin: 5px 0px;
}

#linesHamburgerImage {
  display: none;
  position: absolute;
  width: 80px;
  top: 15px;
  right: 15px;
}

#hamburger a {
  color: black;
  text-decoration: none;
}



#hamburger a:hover {
  transition: all 0.2s ease-in-out;
  font-size: 43px;
}

button:hover {
  background-color: var(--offWhite-Color);
  filter: brightness(110%);
  transition: all 0.2s ease-in-out;
  transform: scale(1.025);
}




/* ////////////project-section//////////// */

#projectImages {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  text-align: center;
  padding: 100px 0px;
  /* clip-path: polygon(0 0,50% 50px,100% 0,100% 100%,0 calc(100% - 50px)); */
  border-bottom: none;
  margin-bottom: -70px;
  margin-top: -120px;
}

#projectImages div {
  width: 275px;
  margin: 1.4%;
}

#projectImages img {
  max-width: 100%;
  height: auto;
  border-radius: 5px;
  box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.342);
  margin-bottom: 3px;
}

/* #projectImages img:hover {
  filter: blur(4px);
} */

/* .text {
  color: Black;
  font-size: 1.4rem;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
} */

#projectImages div:hover {
  transition: all 0.3s ease-in-out;
  transform: scale(1.03);
}

#projectImages img:hover {
  box-shadow: 0 5px 4px 0 rgba(0, 0, 0, 0.527)
}

/* .custom-shape-divider-bottom-1646762488 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
} */

.imageCards {
    /* width: 300px;
    height: 400px;
    padding: 15px 7.5px 15px 7.5px; */
    transform: perspective(1000px);
    transform-style: preserve-3d;
    transition: transform 200ms cubic-bezier(0.03, 0.98, 0.52, .99);
}

/* //////////////curved//////////////// */
.curved svg {
  /* display: block; */
  /* border: none; */
  /* border-bottom: -10px; */
  width: 115%;
}

.curved .top {
  position: relative;
  /* top: -30px; */
  z-index: -1;
  width: 120%;
  /* border-top: none; */
  /* margin-top: -5px; */
}

/* /////////////foooter////////////// */


footer {
  display: flex;
  justify-content: space-between;
  align-content: center;
  flex-flow: column nowrap;
  /* border-top: 2px solid var(--greyishColor); */
  margin: 0 auto;
  text-align: center;
  background-color: var(--greyishColor);
  height: 640px;
  padding:30px 0px 40px 0px;
  border: none;
  margin-top: -20px;
}

footer a {
  text-decoration: none;
  color: black;
}

#socials {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  margin: 20px 0px 0px 0px;
}

#socials p {
  font-size: 1.15rem;
}

#socials a:hover {
  transition: all 0.3s ease-in-out;
  transform: scale(1.15);
  color: #f8f1f1;
}

/* footer button {
  width: 80%;
  max-width: 350px;
  min-width: 200px;
  height: 60px;
  margin-top: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
  background-color: var(--offWhite-Color);
} */

#contactForm {
  display: flex;
  flex-flow: column nowrap;
  flex-direction: center;
  align-items: center;
  align-content: center;
}

#contactForm p {
  font-size: 1.1rem;
  display: flex;
  flex-flow: column nowrap;
  width: 80%;
} 

#contactForm button, textarea, input {
  /* text-align: center; */
  
  margin: 20px auto;
  width: 100%;
  max-width: 600px;
  min-width: 200px;
  height: 60px;
  border-radius: 5px;
  background-color: var(--offWhite-Color);
  font-size: 1.1rem;
}

#contactForm label {
  color: var(--offWhite-Color);
  padding: 0;
  margin: 0;
  margin-bottom: -10px;
  font-size: 1.5rem;
}

#contactForm button {
  background-color: #4f779bd5;
  border: 1px solid black;
}

#contactForm button:hover {
  background-color: var(--offWhite-Color);
  transition: all 0.3s ease-in-out;
  transform: scale(.99);
  filter: brightness(110%);
}

textarea {
  height: 100px;
}

#contactForm input {
  
  height: 45px
} 

footer p {
  font-size: 0.9rem;
}

/* 16c79a */

/* media querys */
@media only screen and (max-width: 340px) {
#mainTitePhoto div {
   
    margin: 0 0;
  }
  header h3 {
    font-size: 1.5rem;
  }
  footer a {
    font-size: .8rem;
  }
  .curved {
    height: 80px;
  }
}


@media only screen and (max-width: 490px) {
 
  .subHeaderSection {
    margin-bottom: -.5px;
  }
}


@media only screen and (max-width: 568px) {
  #projectImages div {
    width: 70%;
    margin: 50px 10%;
    /* padding: 20px 0; */
  }

  .picsum {
    margin: 0 auto;
    text-align: center;
    width: 100% !important;
  }
}

@media only screen and (max-width: 729px) {
  nav {
    display: none;
  }
  #hamburger {
    display: none;
  }
  #linesHamburgerImage {
    display: block;
  }
}

@media only screen and (min-width: 730px) {
  #hamburger {
    display: none;
  }
}

@media only screen and (max-width: 831px) {
  #mainTitePhoto {
    flex-flow: column;
  }
  #mainTitePhoto div {
    margin-top: 50px;
    margin: 0 auto;
    text-align: center;
  }
  #mainPhoto {
    width: 95%;
    margin: 0 auto;
    margin-bottom: 15px;
  }
  #mainTitePhoto div p {
    width: 100%;
  }
  #mainTitePhoto button {
    width: 80%;
    margin-bottom: 50px;
  }
}

@media only screen and (min-width: 1100px) {
  #projectImages {
    max-width: 1100px;
    margin: 15px auto 20px auto;
  }

  #mainTitePhoto {
    max-width: 1100px;
  }

  header div {
    max-width: 1100px;
    margin: 0 auto;
  }
}

